4.56

ATTENTION: Globhal Mobilization Weferlingen misson.sqm files have changed!!!
ATTENTION2: The scripts in the clientui, common, cba and revive folders are compiled with the ArmaScriptCompiler (sqfc files). Please report problems asap (though it should work fine and I'll convert all folders to make them work with ASC)

- Added: d_sm_vec_weighting to dom_settings table (one can set the weight for selectRandomWeight function for planes, helicopters, tanks and other vehicles in there)
- Added: Parameter d_WithVoicesDisabled (default 0) to disable voices, currently only works for VN map using their module, by longtimegamer
- Added: New parameter d_pnspace_msave (default 1, enabled), "Save mission progress to profileNamespace if no database is available"
- Added: New parameter d_pnspace_msave_auto (default 1, enabled), "Saved profileNamespace mission progress auto load"
- Added: New parameter d_artycheckfriendlies (Check for friendly units near artillery targets when firing artillery), default Yes (1)
- Added: Server admin can set a default value for client side checkbox "automatically reduce view distance at maintarget" still false for TT and true otherwise, by longtimegamer
- Added: AI awareness and aggressive fire is only activated when d_mt_spotted is true, by longtimegamer
- Added: If a database is available a logged in admin can add up to 10000 score points to another player
- Added: Workaround for camps stall when AI is stuck inside a nearby rock for example (all barracks must be destroyed and just a few enemy units left, after that a 6 minute timer starts)
- Added: Bridge layer BrPz1 in the Global Mobilization versions
- Added: Stream friendly player names, ides player names when stream friendly UI is enabled, by longtimegamer
- Added: Adaptive settings for number of civilians, lay down behavior timer, walking civs can now be threatened and will sometimes low crawl or middle walk, by longtimegamer