@@ -11,6 +11,7 @@ if ((_this # 4) isEqualTo "") exitWith {false};
 private _v = d_misc_sc_hash2 getOrDefault [_this # 4, -1];
 if (_v isEqualType 1) then {
 	_v = (toLowerANSI getText (configFile>>"CfgAmmo">>(_this # 4)>>"simulation")) in __shots;
+	if (_this # 4 == "rhs_ammo_m84") then {_v = false};
 	d_misc_sc_hash2 set [_this # 4, _v];
 };
 
